# ApexBase

./: .gitignore  ARCHITECTURE_EVOLUTION_PLAN.md  Cargo.toml  README.md  _test_memory_1.py  _test_memory_2.py  acid_performance_analysis.md  bench.tsv  benchmark_vs_duckdb.py  benchmark_vs_duckdb_report.md  build.rs  mkdocs.yml  precondition.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_debug_create.py  test_debug_steps.py  test_multi_simple.py  test_search.py  test_simple_multi.py  versions.json
.cargo/: config.toml
.github/workflow/: build_release.yml
.github/workflows/: build_release.yml  docs.yml  performance.yml
1.18.0/: 404.html  index.html  sitemap.xml
1.18.0/API_REFERENCE/: index.html
1.18.0/ENGINEERING_GUIDELINES/: index.html
1.18.0/EXAMPLES/: index.html
1.18.0/FLOAT16_VECTOR_GUIDE/: index.html
1.18.0/FTS_GUIDE/: index.html
1.18.0/HTAP_ROADMAP/: index.html
1.18.0/QUICK_START/: index.html
1.18.0/RUST_EMBEDDED_API/: index.html
1.18.0/STORAGE_ARCHITECTURE/: index.html
1.18.0/concepts/: index.html
1.18.0/documentation-index/: index.html
1.18.0/installation/: index.html
1.18.0/performance/: index.html
1.18.0/search/: search_index.json
1.19.0/: 404.html  index.html  sitemap.xml
1.19.0/API_REFERENCE/: index.html
1.19.0/ENGINEERING_GUIDELINES/: index.html
1.19.0/EXAMPLES/: index.html
1.19.0/FLOAT16_VECTOR_GUIDE/: index.html
1.19.0/FTS_GUIDE/: index.html
1.19.0/HTAP_ROADMAP/: index.html
1.19.0/QUICK_START/: index.html
1.19.0/RUST_EMBEDDED_API/: index.html
1.19.0/STORAGE_ARCHITECTURE/: index.html
1.19.0/concepts/: index.html
1.19.0/documentation-index/: index.html
1.19.1/: 404.html  index.html  sitemap.xml
1.20.0/: 404.html  index.html  sitemap.xml
1.20.1/: 404.html  index.html  sitemap.xml
1.21.0/: 404.html  index.html  sitemap.xml
1.22.0/: 404.html  index.html  sitemap.xml
1.23.0/: 404.html  index.html  sitemap.xml
1.24.0/: 404.html  index.html  sitemap.xml
apexbase/: README.md  __init__.py  limited_dict.py  query.py  storage.py
benchmarks/: PERFORMANCE_GUARD.md  PERFORMANCE_REPORT.md  bench_blob_lance.py  bench_cold_isolation.py  bench_comprehensive.py  bench_filter_group_order.py  bench_flight.py  bench_group_by_detail.py  bench_hive_complex_vs_duckdb.py  bench_hive_sqlite_equivalent.py  bench_no_cache.py  bench_out_of_core_import.py  bench_perf_canary.py  bench_pg_wire.py  bench_public_api_memory.py  bench_query_optimizer.py  bench_refactor_perf.py  bench_simd_kernels.py  bench_simsimd.py  bench_throughput.py  bench_vector.py  bench_vs_polars.py  bench_vs_sqlite_duckdb.py  bench_vs_sqlite_duckdb_extended.py  benchmark_optimizations.py  check_pytest_runtime.py  compare_perf_baseline.py  db_comparison_simple.py  full_performance_comparison.py  generate_hive_native_sql.py  run_local_perf_guard.py  stress_test.py  stress_test_comparison.py  stress_test_simple.py
docs/: API_REFERENCE.md  ARROW_STRINGCOLUMN_REPORT.md  ENGINEERING_GUIDELINES.md  EXAMPLES.md  FLOAT16_VECTOR_GUIDE.md  FTS_GUIDE.md  FTS_RUST_NATIVE_BENCHMARK.md  HTAP_GAP_ANALYSIS.md  HTAP_ROADMAP.md  P0_IMPLEMENTATION_PLAN.md  QUERY_OPTIMIZER_ROADMAP.md  QUICK_START.md  README.md  RUST_EMBEDDED_API.md  STORAGE_ARCHITECTURE.md  concepts.md  context_manager_guide.md  documentation-index.md  index.md  installation.md  performance.md  release-notes.md  requirements.txt
examples/: bench_fts.rs  bench_rust_internal_memory.rs  bench_rust_public_api_memory.rs  embedded.rs
hooks/: mkdocs_version.py
scripts/: generate_release_notes.py
test/: conftest.py  test_apex_client.py  test_apexbase.py  test_benchmark_vector_module.py  test_blob_payloads.py  test_cache_invalidation_contract.py  test_column_encoding.py  test_column_management.py  test_comprehensive_coverage.py  test_concurrency_stress.py  test_constraints.py  test_data_conversions.py  test_data_modification.py  test_data_storage.py  test_delete_operations.py  test_duckdb_select_features.py  test_edge_cases.py  test_fts_operations.py  test_hive_complex_sql.py  test_hive_functions.py  test_hive_native_sql_artifacts.py  test_import_stability.py  test_index.py  test_init_config.py  test_lifecycle_management.py  test_local_perf_guard.py  test_memory_optimized_public_apis.py  test_memory_vs_duckdb.py  test_multi_database.py  test_multi_statement_advanced.py  test_multi_statement_sql.py  test_multi_table.py  test_new_features.py  test_olap.py  test_oltp.py  test_perf_regression_guard.py  test_performance.py  test_public_api_benchmark_manifest.py  test_pytest_runtime_guard.py  test_query_architecture_contracts.py  (+17 more)
(+324 files in other folders)
