[package]
name = "apexbase"
version = "1.1.0"
edition = "2021"
authors = ["Birch Kwok <birchkwok@gmail.com>"]
description = "High-performance HTAP embedded database with Rust core"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "apexbase"
path = "apexbase/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]
server = ["dep:pgwire", "dep:tokio", "dep:async-trait", "dep:futures", "dep:clap"]

[dependencies]
# Python bindings with numpy support (optional — disabled for server binary)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

# Memory-mapped I/O
memmap2 = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Arrow for zero-copy data transfer
arrow = { version = "57", default-features = false, features = ["ipc", "ffi"] }

# Parquet for import/export
parquet = { version = "57", default-features = false, features = ["arrow"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency  
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.10"
fork_union = "2.3"  # Low-latency Fork-Join parallelism (faster than rayon)

# String optimization
compact_str = { version = "0.8", features = ["serde"] }  # SSO for short strings
string-interner = "0.18"  # String interning for repeated strings

# Checksums
crc32fast = "1.4"

# Byte order handling
byteorder = "1.5"

# Shared byte buffers (used for zero-copy Arrow Buffer interop)
bytes = "1.6"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Random number generation (for testing)
rand = "0.8"

# Regex for query parsing
regex = "1.10"

# Fast substring search
memchr = "2.7"

# Fast non-cryptographic hashing
ahash = "0.8"

# Bloom filter for fast membership testing
bloomfilter = "1.0"

# Cross-platform file locking
fs2 = "0.4"

# LZ4 compression (pure Rust, no C deps)
lz4_flex = "0.11"

# Zstd compression (default, higher ratio than LZ4)
zstd = "0.13"

# Lazy static initialization
once_cell = "1.19"

# Full-text search engine (native Rust integration)
nanofts = "0.4.0"

# JIT compilation for query expressions (Cranelift)
cranelift = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"

# PostgreSQL wire protocol server (optional — enabled for server binary)
pgwire = { version = "0.27", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[[bin]]
name = "apexbase-server"
path = "apexbase/src/bin/server_main.rs"
required-features = ["server"]

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.apexbase-server]
opt-level = 3
