[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apexbase"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "A high-performance field-based storage and query system"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "orjson",
    "pandas",
    "pyarrow",
    "polars"
]

[tool.setuptools]
packages = ["apexbase"]
