[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apexbase"
version = "0.1.0"
authors = [
    { name = "Birch Kwok", email = "birchkwok@gmail.com" }
]
description = "A simple and efficient database for small and medium-sized projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "orjson",
    "pandas",
    "pyarrow",
    "polars"
]

[tool.setuptools]
packages = ["apexbase"]
