[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apexbase"
version = "0.0.1"
authors = [
    { name = "Birch Kwok", email = "birchkwok@gmail.com" }
]
description = "A lightning-fast, feature-rich embedded database designed for modern Python applications."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "orjson",
    "pandas",
    "pyarrow",
    "polars",
    "numpy",
    "psutil"
]

[tool.setuptools]
packages = ["apexbase"]
